--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   image_picker: ^1.1.2
   intl: ^0.19.0
   provider: ^6.1.2
+  tflite_flutter: ^0.10.4
+  trotter: ^2.2.0
   uuid: ^4.4.0
 
 dev_dependencies:
@@ -59,6 +61,11 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/icons/
+    - assets/background.png
+    - assets/medical_chatbot_model.tflite
+    - assets/classes.pkl
+    - assets/words.pkl
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
