updated and added new features

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <application
         android:label="Health Colon Quest"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+
+        
+        <!-- Add the meta-data element below -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyCFanwauncnnYJffClDptthcx_QohDLWVY"/>
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -42,4 +51,5 @@
             <data android:mimeType="text/plain"/>
         </intent>
     </queries>
+
 </manifest>
