--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,14 +35,25 @@ dependencies:
   firebase_storage: ^11.7.7
   flutter:
     sdk: flutter
+  flutter_map: ^7.0.1
   flutter_staggered_grid_view: ^0.7.0
   flutter_svg: ^2.0.10+1
+  flutter_webview_plugin: ^0.4.0
+  fluttertoast: ^8.2.6
+  geolocator: ^12.0.0
+  google_maps_flutter: ^2.7.0
+  html: ^0.15.4
   image_picker: ^1.1.2
   intl: ^0.19.0
+  latlong2: ^0.9.1
+  location: ^6.0.2
   provider: ^6.1.2
+  shared_preferences: ^2.2.3
   tflite_flutter: ^0.10.4
   trotter: ^2.2.0
+  url_launcher: ^6.3.0
   uuid: ^4.4.0
+  xml: ^6.5.0
 
 dev_dependencies:
   flutter_lints: ^3.0.0
