--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   xml: ^6.5.0
 
   http: any
+  intl_phone_field: ^3.2.0
 dev_dependencies:
   flutter_lints: ^3.0.0
   flutter_test:
