--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,8 +47,6 @@ dependencies:
   latlong2: ^0.9.1
   location: ^6.0.2
   provider: ^6.1.2
-  shared_preferences: ^2.2.3
-  tflite_flutter: ^0.10.4
   trotter: ^2.2.0
   url_launcher: ^6.3.0
   uuid: ^4.4.0
@@ -56,6 +54,7 @@ dependencies:
 
   http: any
   intl_phone_field: ^3.2.0
+  google_generative_ai: ^0.4.3
 dev_dependencies:
   flutter_lints: ^3.0.0
   flutter_test:
