--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   intl_phone_field: ^3.2.0
   google_generative_ai: ^0.4.3
   flutter_dotenv: ^5.1.0
+  path_provider: ^2.1.3
 dev_dependencies:
   flutter_lints: ^3.0.0
   flutter_test:
